# swap_correction

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  analyze_high_speed_swaps.py  analyze_swap_correction.py  analyze_swap_patterns.py  analyze_swaps.py  close_proximity_swap_analysis.md  data_structure.md  environment.yml  high_speed_swap_analysis.md  implementation_plan.md  metrics.py  mkdocs.yml  pivr_filter.py  pivr_loader.py  plotting.py  pyproject.toml  requirements.txt  setup.py  swap_category_analysis.md  swap_correct.py  swap_correction_documentation.md  tracking_correction.py  utils.py
.cursor/rules/: document.mdc  incremental.mdc  tdd.mdc
analysis_results/: swap_analysis.csv  swap_analysis_20250505_142559.txt  swap_analysis_20250505_144221.txt
benchmark_results/: detailed_results.csv  summary_statistics.csv
docs/: README.md  api.md  changelog.md  code_of_conduct.md  contributing.md  dependency_analysis.md  developer_guide.md  faq.md  index.md  quickstart.md  swap_correction_explained.md  user_guide.md
docs/api/: filtering.md  flagging.md  functions.md  hard_coded_variables.md  main.md  metrics.md  tracking.md  utils.md
docs/contributing/: development.md
docs/developer/: architecture.md
docs/examples/: advanced_usage.md  basic_usage.md
docs/guides/: core_concepts.md  installation.md  quickstart.md
docs/legacy/: deprecated.md  (+3 more)
scripts/: analyze_swaps.py  benchmark_swap_corrector.py  generate_synthetic_data.py  profile_pipeline.py
swap_analysis/: swap_patterns.csv
swap_analysis_results/: detailed_results.csv  summary.txt
swap_correction/: __init__.py  pivr_loader.py  plotting.py  swap_correct.py  tracking_correction.py  utils.py
swap_corrector/: config.py  filtering.py  kalman_filter.py  logger.py  metrics.py  pivr_loader.py  plotting.py  processor.py  profiling.py  tracking_correction.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  requirements-test.txt  test_config.py  test_detectors.py  test_integration.py  test_kalman_filter.py  test_logger.py  test_metrics.py  test_pivr_loader.py  test_plotting.py  test_processor.py  test_proximity_detector.py  test_speed_detector.py  test_stress.py  test_swap_correct.py  test_tracking_correction.py  test_turn_detector.py  test_utils.py
(+39 files in other folders)
